--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,35 @@
 MONGODB_URI=your_mongodb_connection_string
+DNS_SERVERS=8.8.8.8,1.1.1.1
+MONGODB_SERVER_SELECTION_TIMEOUT_MS=15000
+MONGODB_CONNECT_TIMEOUT_MS=15000
 JWT_SECRET=replace_with_a_strong_secret
+ADMIN_JWT_SECRET=replace_with_admin_jwt_secret
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin123
+RAZORPAY_KEY_ID=
+RAZORPAY_KEY_SECRET=
+RAZORPAY_WEBHOOK_SECRET=
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=
+CRM_EMAIL_WEBHOOK_URL=
+CRM_WHATSAPP_WEBHOOK_URL=
+CRM_WEBHOOK_SECRET=
+CRM_NOTIFY_INTERVAL_MS=600000
+CRM_WEBHOOK_QUEUE_INTERVAL_MS=60000
+CRM_WEBHOOK_MAX_ATTEMPTS=5
+FX_CACHE_TTL_MS=21600000
+REFERRAL_REWARD_FLAT_INR=1000
+REFERRAL_REWARD_MIN_ORDER=0
+REFERRAL_REWARD_VALID_DAYS=90
+MEDIA_UPLOAD_DIR=uploads
+MEDIA_UPLOAD_MAX_BYTES=15728640
+MEDIA_PUBLIC_BASE_URL=http://localhost:5000
+MEDIA_CDN_BASE_URL=
+MEDIA_CACHE_CONTROL_PUBLIC=public, max-age=300
+MEDIA_CACHE_CONTROL_IMMUTABLE=public, max-age=31536000, immutable
 PORT=5000
 CLIENT_URL=http://localhost:5173
 VITE_API_URL=http://localhost:5000/api
-
+VITE_GA4_MEASUREMENT_ID=
+VITE_HEATMAP_ENABLED=false
